--- a/style.css
+++ b/style.css
@@ -1,7 +1,458 @@
-body {
+:root {
+    --black: rgba(0, 0, 0, 1);
+    --bg: rgba(11, 29, 38, 1);
+    --accent: rgba(251, 215, 132, 1);
+    --wei: rgba(255, 255, 255, 1);
+
+    --font-size-s: 17px;
+    --font-size-m: 18px;
+    --font-size-l: 24px;
+    --font-size-xl: 25px;
+    --font-size-xxl: 64px;
+    --font-size-xxxl: 100px;
+
+    --font-family-gilroy-bold: "Gilroy-Bold";
+    --font-family-gilroy-medium: "Gilroy-Medium";
+    --font-family-lato: "Lato";
+    --font-family-quicksand: "Quicksand";
+    --font-family-roboto: "Roboto";
+}
+
+.gilroy-medium-white-18px {
+    color: var(--wei);
+    font-family: var(--font-family-gilroy-medium);
+    font-size: var(--font-size-m);
+    font-weight: 500;
+    font-style: normal;
+}
+
+.roboto-normal-grandis-18px {
+    color: var(--accent);
+    font-family: var(--font-family-roboto);
+    font-size: var(--font-size-m);
+    font-weight: 400;
+    font-style: normal;
+}
+
+.gilroy-bold-white-18px {
+    color: var(--wei);
+    font-family: var(--font-family-gilroy-bold);
+    font-size: var(--font-size-m);
+    font-weight: 700;
+    font-style: normal;
+}
+
+.gilroy-bold-grandis-24px {
+    color: var(--accent);
+    font-family: var(--font-family-gilroy-bold);
+    font-size: var(--font-size-l);
+    font-weight: 700;
+    font-style: normal;
+}
+
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,300,300italic|Quicksand:400,600|Lato:400");
+
+@font-face {
+    font-family: "Gilroy-Medium";
+    font-style: normal;
+    font-weight: 500;
+    src: url("https://fonts.animaapp.com/Gilroy-Medium") format("opentype");
+}
+
+@font-face {
+    font-family: "Gilroy-Bold";
+    font-style: normal;
+    font-weight: 700;
+    src: url("https://fonts.animaapp.com/Gilroy-Bold") format("opentype");
+}
+
+.home {
+    align-items: flex-start;
+    background-color: var(--bg);
+    display: flex;
+    height: 2860px;
+    width: 1920px;
+}
+
+.hidden,
+.hidden * {
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.overlap-group1 {
+    height: 2810px;
+    margin-top: -22.5px;
     position: relative;
     width: 1920px;
-    height: 2860px;
-    background: #0B1D26;
-    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.2);
+}
+
+.bg {
+    height: 1751px;
+    left: 0;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    width: 1920px;
+}
+
+.content-1 {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    height: 1200px;
+    left: 229px;
+    overflow: hidden;
+    position: absolute;
+    top: 1610px;
+    width: 1464px;
+}
+
+footer {
+    align-items: flex-start;
+    display: flex;
+    height: 280px;
+    margin-top: 200px;
+    min-width: 1466px;
+}
+
+.flex-col {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    margin-top: 33px;
+    min-height: 61px;
+    width: 305px;
+}
+
+.a-man-once-said {
+    color: var(--wei);
+    font-family: var(--font-family-roboto);
+    font-size: var(--font-size-xl);
+    font-style: italic;
+    font-weight: 300;
+    letter-spacing: 0.25px;
+    min-height: 29px;
+}
+
+.time-is-precious-waste-it-wisely {
+    color: var(--wei);
+    font-family: var(--font-family-quicksand);
+    font-size: var(--font-size-m);
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-left: 2px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.links-1 {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    margin-left: 200px;
+    min-height: 184px;
+    width: 169px;
+}
+
+.press {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 16px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.the-team {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 24px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.more-on {
+    letter-spacing: 0;
+    line-height: 32px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.jobs {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 16px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.links {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    margin-left: 593px;
+    min-height: 280px;
+    width: 205px;
+}
+
+.about-mntn {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 24px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.contributors-writers {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 16px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.write-for-us {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 16px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.privacy-policy {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 16px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.contact-us {
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 16px;
+    min-height: 32px;
+    white-space: nowrap;
+}
+
+.content-2 {
+    align-items: flex-start;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 1px;
+    min-width: 1462px;
+}
+
+.x01 {
+    height: 720px;
+    margin-left: 114px;
+    object-fit: cover;
+    width: 566px;
+}
+
+.overlap-group {
+    height: 542px;
+    margin-top: 40px;
+    position: relative;
+    width: 666px;
+}
+
+.content-3 {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    height: 443px;
+    left: 34px;
+    position: absolute;
+    top: 99px;
+    width: 632px;
+}
+
+.tagline {
+    align-items: center;
+    display: flex;
+    height: 21px;
+    min-width: 389px;
+}
+
+.line {
+    background-color: var(--accent);
+    height: 2px;
+    margin-top: 1px;
+    width: 72px;
+}
+
+.what-and-whys-this {
+    letter-spacing: 6px;
+    margin-left: 24px;
+    min-height: 21px;
+    min-width: 291px;
+}
+
+.deep-down-i-adore-t {
+    color: var(--wei);
+    font-family: var(--font-family-lato);
+    font-size: var(--font-size-m);
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-top: 27px;
+    min-height: 160px;
+    width: 632px;
+}
+
+.funny-enough-i-made-this-for-fun {
+    color: var(--wei);
+    font-family: var(--font-family-quicksand);
+    font-size: var(--font-size-xxl);
+    font-weight: 600;
+    letter-spacing: 0;
+    margin-top: 26px;
+    min-height: 160px;
+    width: 555px;
+}
+
+.more {
+    align-items: center;
+    display: flex;
+    height: 21px;
+    margin-top: 28px;
+    min-width: 72px;
+}
+
+.iconnavigationarrow_downward-24px {
+    height: 16px;
+    margin-left: 9px;
+    margin-top: 1px;
+    width: 24px;
+}
+
+.equipment-2 {
+    letter-spacing: 0;
+    min-height: 21px;
+    min-width: 37px;
+}
+
+.equipment-1 {
+    height: 141px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 406px;
+}
+
+.header {
+    align-items: center;
+    display: flex;
+    height: 25px;
+    left: 80px;
+    overflow: hidden;
+    position: absolute;
+    top: 86px;
+    width: 1760px;
+}
+
+.equipment {
+    letter-spacing: 0;
+    margin-bottom: 1px;
+    margin-left: 739px;
+    min-height: 22px;
+    min-width: 90px;
+}
+
+.about-us {
+    letter-spacing: 0;
+    margin-bottom: 1px;
+    margin-left: 40px;
+    min-height: 22px;
+    min-width: 75px;
+}
+
+.blog {
+    letter-spacing: 0;
+    margin-bottom: 1px;
+    margin-left: 40px;
+    min-height: 22px;
+    min-width: 38px;
+}
+
+.account {
+    align-items: center;
+    align-self: flex-end;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 640px;
+    min-width: 100px;
+}
+
+.icons-general-cart {
+    align-self: flex-end;
+    height: 24px;
+    margin-bottom: -1px;
+    margin-left: 1564px;
+    width: 24px;
+}
+
+.account-1 {
+    color: var(--wei);
+    font-family: var(--font-family-gilroy-bold);
+    font-size: var(--font-size-s);
+    font-weight: 700;
+    letter-spacing: 0;
+    margin-top: 1px;
+    min-height: 21px;
+    min-width: 66px;
+}
+
+.bg-content {
+    height: 700px;
+    left: 0;
+    position: absolute;
+    top: 1222px;
+    width: 1920px;
+}
+
+.content {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    height: 154px;
+    left: 274px;
+    position: absolute;
+    top: 372px;
+    width: 950px;
+}
+
+.group-17 {
+    align-items: center;
+    display: flex;
+    height: 21px;
+    min-width: 512px;
+}
+
+.an-unnecessary-introduction {
+    letter-spacing: 6px;
+    margin-left: 32px;
+    min-height: 21px;
+    min-width: 406px;
+}
+
+.rectangle-21 {
+    background-color: var(--accent);
+    height: 2px;
+    margin-top: 1px;
+    width: 72px;
+}
+
+.title {
+    color: var(--wei);
+    font-family: var(--font-family-quicksand);
+    font-size: var(--font-size-xxxl);
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 100px;
+    margin-top: 7px;
+    min-height: 125px;
+    width: 950px;
 }
