--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@
     align-items: flex-start;
     background-color: var(--bg);
     display: flex;
-    height: 2860px;
-    width: 1920px;
+    height: 100vh;
+    width: 100vw;
 }
 
 .hidden,
