Update html and css files

--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ footer {
     margin-top: 16px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .the-team {
@@ -170,6 +171,7 @@ footer {
     margin-top: 24px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .more-on {
@@ -177,6 +179,7 @@ footer {
     line-height: 32px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-bold-grandis-24px";
 }
 
 .jobs {
@@ -185,6 +188,7 @@ footer {
     margin-top: 16px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .links {
@@ -202,6 +206,7 @@ footer {
     margin-top: 24px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .contributors-writers {
@@ -210,6 +215,7 @@ footer {
     margin-top: 16px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .write-for-us {
@@ -218,6 +224,7 @@ footer {
     margin-top: 16px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .privacy-policy {
@@ -226,6 +233,7 @@ footer {
     margin-top: 16px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .contact-us {
@@ -234,6 +242,7 @@ footer {
     margin-top: 16px;
     min-height: 32px;
     white-space: nowrap;
+    font-family: "gilroy-medium-white-18px";
 }
 
 .content-2 {
@@ -288,6 +297,7 @@ footer {
     margin-left: 24px;
     min-height: 21px;
     min-width: 291px;
+    font-family: "roboto-normal-grandis-18px";
 }
 
 .deep-down-i-adore-t {
@@ -332,6 +342,7 @@ footer {
     letter-spacing: 0;
     min-height: 21px;
     min-width: 37px;
+    font-family:  "roboto-normal-grandis-18px";
 }
 
 .equipment-1 {
@@ -359,6 +370,7 @@ footer {
     margin-left: 739px;
     min-height: 22px;
     min-width: 90px;
+    font-family: "gilroy-bold-white-18px";
 }
 
 .about-us {
@@ -367,6 +379,7 @@ footer {
     margin-left: 40px;
     min-height: 22px;
     min-width: 75px;
+    font-family: "gilroy-bold-white-18px";
 }
 
 .blog {
@@ -375,6 +388,7 @@ footer {
     margin-left: 40px;
     min-height: 22px;
     min-width: 38px;
+    font-family: "gilroy-bold-white-18px";
 }
 
 .account {
@@ -436,6 +450,7 @@ footer {
     margin-left: 32px;
     min-height: 21px;
     min-width: 406px;
+    font-family: "roboto-normal-grandis-18px";
 }
 
 .rectangle-21 {
