Update css file

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
     align-items: flex-start;
     background-color: var(--bg);
     display: flex;
-    height: 100vh;
+    height: 2860px;
     width: 100vw;
 }
 
